--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazone Group</title>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/accueil.css">
-    <link rel="stylesheet" href="css/presentation.css">
-    <link rel="stylesheet" href="css/galerie.css">
-    <link rel="stylesheet" href="css/restaurant.css">
-    <link rel="stylesheet" href="css/offres.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./accueil.css">
+    <link rel="stylesheet" href="./presentation.css">
+    <link rel="stylesheet" href="./galerie.css">
+    <link rel="stylesheet" href="./restaurant.css">
+    <link rel="stylesheet" href="./offres.css">
+    <link rel="stylesheet" href="./contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -123,39 +123,39 @@
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 6.jpg" alt="Porte du Non Retour">
+                    <img src="./Image projet - Copie/Image 6.jpg" alt="Porte du Non Retour">
                     <div class="gallery-overlay"><span>Porte du Non Retour</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 2.jpg" alt="Ganvié-Village Lacustre">
+                    <img src="./Image projet - Copie/Image 2.jpg" alt="Ganvié-Village Lacustre">
                     <div class="gallery-overlay"><span>Ganvié-Village Lacustre</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 5.jpg" alt="Plage">
+                    <img src="./Image projet - Copie/Image 5.jpg" alt="Plage">
                     <div class="gallery-overlay"><span>Plage</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 1.jpg" alt="Chute de Tanougou">
+                    <img src="./Image projet - Copie/Image 1.jpg" alt="Chute de Tanougou">
                     <div class="gallery-overlay"><span>Chute de Tanougou</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 30.jpg" alt="Rivière Noire">
+                    <img src="./Image projet - Copie/Image 30.jpg" alt="Rivière Noire">
                     <div class="gallery-overlay"><span>Rivière Noire</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 32.jpg" alt="Coucher de soleil">
+                    <img src="./Image projet - Copie/Image 32.jpg" alt="Coucher de soleil">
                     <div class="gallery-overlay"><span>Coucher</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 12.jpg" alt="Amazone">
+                    <img src="./Image projet - Copie/Image 12.jpg" alt="Amazone">
                     <div class="gallery-overlay"><span>Amazone</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 4.jpg" alt="Porto-Novo">
+                    <img src="./Image projet - Copie/Image 4.jpg" alt="Porto-Novo">
                     <div class="gallery-overlay"><span>Porto-Novo</span></div>
                 </div>
                 <div class="gallery-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 46.jpg" alt="Pendjari">
+                    <img src="./Image projet - Copie/Image 46.jpg" alt="Pendjari">
                     <div class="gallery-overlay"><span>Pendjari</span></div>
                 </div>
             </div>
@@ -178,84 +178,84 @@
             </div>
             <div class="menu-grid">
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 29.jpg" alt="Pastel viande/poisson">
+                    <img src="./Image projet - Copie/Image 29.jpg" alt="Pastel viande/poisson">
                     <div class="menu-overlay">
                         <h3>Pastel viande/poisson</h3>
                         <p class="price">10 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 14.jpg" alt="Salade">
+                    <img src="./Image projet - Copie/Image 14.jpg" alt="Salade">
                     <div class="menu-overlay">
                         <h3>Salade</h3>
                         <p class="price">15 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 18.jpg" alt="Poisson braisé aux légumes">
+                    <img src="./Image projet - Copie/Image 18.jpg" alt="Poisson braisé aux légumes">
                     <div class="menu-overlay">
                         <h3>Poisson braisé aux légumes</h3>
                         <p class="price">25 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 17.jpg" alt="Brochettes de Crevettes">
+                    <img src="./Image projet - Copie/Image 17.jpg" alt="Brochettes de Crevettes">
                     <div class="menu-overlay">
                         <h3>Brochettes de Crevettes</h3>
                         <p class="price">30 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 13.jpg" alt="Pâtes Méditerranéennes">
+                    <img src="./Image projet - Copie/Image 13.jpg" alt="Pâtes Méditerranéennes">
                     <div class="menu-overlay">
                         <h3>Pâtes Méditerranéennes</h3>
                         <p class="price">28 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 21.jpg" alt="N'dolè Plantain">
+                    <img src="./Image projet - Copie/Image 21.jpg" alt="N'dolè Plantain">
                     <div class="menu-overlay">
                         <h3>N'dolè Plantain</h3>
                         <p class="price">40 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 11.jpg" alt="Sokuru Royale">
+                    <img src="./Image projet - Copie/Image 11.jpg" alt="Sokuru Royale">
                     <div class="menu-overlay">
                         <h3>Sokuru Royale</h3>
                         <p class="price">25 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 19.jpg" alt="Agneau à l'Africaine">
+                    <img src="./Image projet - Copie/Image 19.jpg" alt="Agneau à l'Africaine">
                     <div class="menu-overlay">
                         <h3>Agneau à l'Africaine</h3>
                         <p class="price">35 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 10.jpg" alt="Amala Royale">
+                    <img src="./Image projet - Copie/Image 10.jpg" alt="Amala Royale">
                     <div class="menu-overlay">
                         <h3>Amala Royale</h3>
                         <p class="price">30 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 23.jpg" alt="Citronnade Fraîche">
+                    <img src="./Image projet - Copie/Image 23.jpg" alt="Citronnade Fraîche">
                     <div class="menu-overlay">
                         <h3>Citronnade Fraîche</h3>
                         <p class="price">15 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 26.jpg" alt="Jus de Pastèque">
+                    <img src="./Image projet - Copie/Image 26.jpg" alt="Jus de Pastèque">
                     <div class="menu-overlay">
                         <h3>Jus de Pastèque</h3>
                         <p class="price">15 €</p>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 28.jpg" alt="Beignets de Riz">
+                    <img src="./Image projet - Copie/Image 28.jpg" alt="Beignets de Riz">
                     <div class="menu-overlay">
                         <h3>Beignets de Riz</h3>
                         <p class="price">10 €</p>
@@ -281,40 +281,40 @@
             </div>
             <div class="offres-grid">
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 33.jpg" alt="Chambre Prestige" class="offre-image">
+                    <img src="./Image projet - Copie/Image 33.jpg" alt="Chambre Prestige" class="offre-image">
                     <h3>Chambre Prestige</h3>
                     <p class="offre-description">Élégante et confortable, elle offre un espace moderne idéal pour un séjour paisible.</p>
                     <div class="offre-price">À partir de 40€/nuit</div>
                 </div>
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 35.jpg" alt="Suite Ebène" class="offre-image">
+                    <img src="./Image projet - Copie/Image 35.jpg" alt="Suite Ebène" class="offre-image">
                     <h3>Suite Ebène </h3>
                     <p class="offre-description">Spacieuse et raffinée, elle combine charme africain et confort premium pour une expérience haut de gamme.</p>
                     <div class="offre-price">À partir de 70€/nuit</div>
                 </div>
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 44.jpg" alt="Chambre Royale" class="offre-image">
+                    <img src="./Image projet - Copie/Image 44.jpg" alt="Chambre Royale" class="offre-image">
                     <div class="offre-icon"><i class="fas fa-tent"></i></div>
                     <h3>Chambre Royale</h3>
                     <p class="offre-description">Inspirée de l’héritage de Tassi Hangbé, elle propose une ambiance chaleureuse et authentique, parfaite pour un séjour inoubliable.</p>
                     <div class="offre-price">À partir de 100€/nuit</div>
                 </div>
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 36.jpg" alt="Salon Cosy" class="offre-image">
+                    <img src="./Image projet - Copie/Image 36.jpg" alt="Salon Cosy" class="offre-image">
                     <div class="offre-icon"><i class="fas fa-tree"></i></div>
                     <h3>Salon Cosy</h3>
                     <p class="offre-description">Un coin chaleureux et confortable, conçu pour se reposer, lire ou savourer une pause en toute sérénité.</p>
                     <div class="offre-price">À partir de 15€/heure</div>
                 </div>
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 39.jpg" alt="Spa Individuel" class="offre-image">
+                    <img src="./Image projet - Copie/Image 39.jpg" alt="Spa Individuel" class="offre-image">
                     <div class="offre-icon"><i class="fas fa-crown"></i></div>
                     <h3>Spa Individuel</h3>
                     <p class="offre-description">Un moment de bien-être privé, parfait pour profiter d’une relaxation sur mesure en toute tranquillité.</p>
                     <div class="offre-price">À partir de 45 €/session</div>
                 </div>
                 <div class="offre-card">
-                    <img src="C:\Users\LENOVO\Pictures\Image projet\Image 37.jpg" alt="Spa Collectif" class="offre-image">
+                    <img src="./Image projet - Copie/Image 37.jpg" alt="Spa Collectif" class="offre-image">
                     <div class="offre-icon"><i class="fas fa-city"></i></div>
                     <h3>Spa Collectif</h3>
                     <p class="offre-description">Un espace détente partagé, idéal pour se relaxer en douceur dans une ambiance apaisante.</p>
