--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazone Group</title>
-    <link rel="stylesheet" href="./global.css">
-    <link rel="stylesheet" href="./accueil.css">
-    <link rel="stylesheet" href="./presentation.css">
-    <link rel="stylesheet" href="./galerie.css">
-    <link rel="stylesheet" href="./restaurant.css">
-    <link rel="stylesheet" href="./offres.css">
-    <link rel="stylesheet" href="./contact.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/accueil.css">
+    <link rel="stylesheet" href="./css/presentation.css">
+    <link rel="stylesheet" href="./css/galerie.css">
+    <link rel="stylesheet" href="./css/restaurant.css">
+    <link rel="stylesheet" href="./css/offres.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
